# COS214_Prac4

./: Barn.cpp  Barn.h  BreadthFirstIterator.cpp  BreadthFirstIterator.h  CMakeLists.txt  ConcreteCropField.cpp  CropField.cpp  CropField.h  CropFieldDecorator.cpp  CropFieldDecorator.h  DeliveryTruck.cpp  DeliveryTruck.h  DephtFirstIterator.cpp  DephtFirstIterator.h  DrySoil.cpp  DrySoil.h  ExtraBarnDecorator.cpp  ExtraBarnDecorator.h  FarmTraversalContext.cpp  FarmTraversalContext.h  FarmUnit.cpp  FarmUnit.h  FertilizerDecorator.cpp  FertilizerDecorator.h  FertilizerTruck.cpp  FertilizerTruck.h  FloodedSoil.cpp  FloodedSoil.h  FruitfulSoil.cpp  FruitfulSoil.h  Iterator.cpp  Iterator.h  Makefile  README.md  SoilState.cpp  SoilState.h  TraversalContext.cpp  TraversalContext.h  TruckLogisticsManager.cpp  TruckLogisticsManager.h  (+5 more)
